--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     
     <!-- Primary SEO Meta Tags -->
-    <title>RYNX - Full-Stack Developer | React & TypeScript Expert | Software Engineer</title>
+    <title>RYNX - Full-Stack Developer | Software Engineer</title>
     <meta name="description" content="RYNX is a passionate Full-Stack Developer specializing in React, TypeScript, Node.js, and modern web technologies. Expert in building scalable web applications, mobile apps, and innovative software solutions. Based in Erbil, Kurdistan." />
     <meta name="keywords" content="Full-Stack Developer, React Developer, TypeScript Developer, Node.js Developer, Software Engineer, Web Developer, Frontend Developer, Backend Developer, Mobile App Developer, Erbil Developer, Kurdistan Developer, JavaScript Developer, Web Development, Software Development, Custom Software, Web Applications, Mobile Applications, API Development, Database Design, DevOps, UI/UX Design" />
     <meta name="author" content="RYNX" />
